--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,16 @@
 .App {
   text-align: center;
+  display: flex;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+  justify-content: center;
+  flex-direction: column;
+}
+.feedback,.title{
+  height: 20px;
+  font-weight: 800;
+  font-size: 20px;
 }
 
 .App-logo {
